opam-version: "2.0"
maintainer: "opensource@janestreet.com"
authors: ["Jane Street Group, LLC <opensource@janestreet.com>"]
homepage: "https://github.com/janestreet/krb"
bug-reports: "https://github.com/janestreet/krb/issues"
dev-repo: "git+https://github.com/janestreet/krb.git"
doc: "https://ocaml.janestreet.com/ocaml-core/latest/doc/krb/index.html"
license: "MIT"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "ocaml" {>= "4.07.0"}
  "async"
  "core"
  "env_config"
  "hex_encode"
  "ppx_jane"
  "protocol_version_header"
  "username_kernel"
  "dune"                    {>= "2.0.0"}
]
synopsis: "A library for using Kerberos for both Rpc and Tcp communication"
description: "
Jane Street's library for Kerberizing RPC connections so that
  - the server gets an authenticated principal (i.e. username) with
    every incoming connection, and
  - RPC communication may be encrypted, if necessary.
"
